[package]
name = "upload_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"

# for dealing with zip-file uploads
zip = "0.6.2"
zip-extensions = "0.6.1"
mime = "0.3.16"
tree_magic = "0.2.3"

# for allowing user configuration
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
etcetera = "0.4"

# error-handling
thiserror = "1.0"

# for reading audio-file metadata
lofty = "0.6"
